Fix white bottom and text overflow on post

--- a/src/components/HomeRoutes/Feed/feed.scss
+++ b/src/components/HomeRoutes/Feed/feed.scss
@@ -5,13 +5,7 @@
 .feed-screen {
   animation-duration: 0.15s;
   animation-name: fadein;
-
   background-color: var(--background-color);
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
   padding: 16px;
 }
 
